--- a/XellissimeTravel/View/Storyboard/Base.lproj/LaunchScreen.storyboard
+++ b/XellissimeTravel/View/Storyboard/Base.lproj/LaunchScreen.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MountainGif" translatesAutoresizingMaskIntoConstraints="NO" id="W3q-oM-jNX">
-                                <rect key="frame" x="0.0" y="44" width="414.00000000000091" height="818"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
